Ajustes nas classes para passar os textos para o xml "strings"

--- a/ProjetosAndroid/PI2/app/src/main/res/values/strings.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/values/strings.xml
@@ -3,25 +3,40 @@
     <string name="title_activity_splash">Splash</string>
     <string name="title_activity_login">Login</string>
     <string name="app_name">Cimatec_Guide</string>
-    <string name="bemvindo">Bem-Vindo!</string>
-    <string name="cursos">Cursos</string>
-    <string name="graduacao">Graduação</string>
-    <string name="autorizacao">Ato de Autorização</string>
-    <string name="manualaluno">Manual do Aluno</string>
-    <string name="regimento">Regimento Disciplinar</string>
-    <string name="textocurso">texto curso</string>
-    <string name="disciplinas">Disciplinas</string>
-    <string name="dirigentes">Dirigentes</string>
-    <string name="disciplinas_final">Disciplinas do Docente</string>
-    <string name="nomedisciplina">nomedisciplina</string>
-    <string name="docentes">Docentes</string>
-    <string name="docentes_final">Docentes da Disciplina</string>
-    <string name="nomedocente">Nome docente</string>
-    <string name="titulo_dialog">Cimatec Guide informa</string>
+    <string name="welcome">Bem-Vindo!</string>
+    <string name="courses">Cursos</string>
+    <string name="graduation">Graduação</string>
+    <string name="postgraduate">Pós Graduação</string>
+    <string name="authorization_act">Ato de Autorização</string>
+    <string name="student_manual">Manual do Aluno</string>
+    <string name="disciplinary_rules">Regimento Disciplinar</string>
+    <string name="disciplines">Disciplinas</string>
+    <string name="leaders">Dirigentes</string>
+    <string name="teachers">Docentes</string>
+    <string name="curriculum">Matriz Curricular</string>
+    <string name="bibliographic_collection">Acervo</string>
+    <string name="course_pedagogical_project">Projeto Pedagógico do Curso</string>
+    <string name="coordinator">Coordenador</string>
+    <string name="duration">Duração</string>
+    <string name="mec_evaluation">Avaliação do MEC</string>
+    <string name="modality">Modalidade</string>
+    <string name="shift">Turno</string>
+    <string name="code">Código</string>
+    <string name="monthly_payment">Mensalidade</string>
+    <string name="about">Sobre</string>
+    <string name="menu">Ementa</string>
+    <string name="hiring">Regime</string>
+    <string name="of"> de </string>
+    <string name="quit_confirmation">Deseja realmente sair?</string>
+    <string name="yes">SIM</string>
+    <string name="not">NÂO</string>
+    <string name="system_error">Erro no Sistema</string>
+
+    <string name="title_dialog">Cimatec Guide informa</string>
     <string name="msg_dialog">Houve erro na conexão</string>
-    <string name="msg_dialog1">Carregando lista de Cursos, por favor aguarde...</string>
-    <string name="msg_dialog2">Carregando lista de Disciplinas, por favor aguarde...</string>
-    <string name="msg_dialog3">Carregando lista de Docentes, por favor aguarde...</string>
+    <string name="msg_dialog_course">Carregando lista de Cursos, por favor aguarde...</string>
+    <string name="msg_dialog_discipline">Carregando lista de Disciplinas, por favor aguarde...</string>
+    <string name="msg_dialog_teacher">Carregando lista de Docentes, por favor aguarde...</string>
     <string name="ac_sair">Sair</string>
     <string name="ac_atualizar">Atualizar</string>
     <string name="ac_pesquisar">Pesquisar</string>
