--- a/ProjetosAndroid/TP2/app/src/main/res/values/strings.xml
+++ b/ProjetosAndroid/TP2/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="title_activity_splash">Splash</string>
     <string name="title_activity_login">Login</string>
-    <string name="app_name">Cimatec_Guide</string>
+    <string name="app_name">Cimatec Guide</string>
     <string name="welcome">Bem-Vindo!</string>
     <string name="courses">Cursos</string>
     <string name="graduation">Graduação</string>
@@ -34,9 +34,11 @@
 
     <string name="title_dialog">Cimatec Guide informa</string>
     <string name="msg_dialog">Houve erro na conexão</string>
+    <string name="msg_dialog_error">Ocorreu um erro inesperado, favor contatar o administrador.</string>
     <string name="msg_dialog_course">Carregando lista de Cursos, por favor aguarde...</string>
     <string name="msg_dialog_discipline">Carregando lista de Disciplinas, por favor aguarde...</string>
     <string name="msg_dialog_teacher">Carregando lista de Docentes, por favor aguarde...</string>
+    <string name="msg_dialog_leader">Carregando lista de Dirigentes, por favor aguarde...</string>
     <string name="quit">Sair</string>
     <string name="update">Atualizar</string>
     <string name="search">Pesquisar</string>
@@ -44,26 +46,4 @@
     <string name="search_discipline">Digite o nome da Disciplina</string>
     <string name="search_teacher">Digite o nome do Docente</string>
 
-
-    <string name="mantenedora">Mantenedora</string>
-    <string name="mantenedora_texto1">Serviço Nacional de Aprendizagem Industrial SENAI-BA</string>
-    <string name="diretor">Diretor de Tecnologia e Inovação do SENAI CIMATEC</string>
-    <string name="diretor_texto">Leone Peter Correia da Silva Andrade</string>
-    <string name="mantida">Mantida</string>
-    <string name="mantida_texto1">Faculdade SENAI CIMATEC</string>
-    <string name="mantida_texto2">Alex Álisson Bandeira Santos</string>
-    <string name="coord_adm">Coordenação Administrativa Financeira</string>
-    <string name="coord_adm_texto">Tatiana Gesteira de Almeida Ferraz</string>
-    <string name="coord_grad">Coordenação da Graduação e Extensão</string>
-    <string name="coord_grad_texto">Tarso Barreto Nogueira</string>
-    <string name="coord_pos">Coordenação de Pós-Graduação e Pesquisa</string>
-    <string name="coord_pos_texto">Alex Álisson Bandeira Santos</string>
-    <string name="coord_ped">Coordenação Pedagógica</string>
-    <string name="coord_ped_texto">Sayonara Nobre De Brito Lordelo</string>
-    <string name="atend_ped">Atendimento Psicopedagógico</string>
-    <string name="atend_ped_texto">Ana Carolina Santos de Lima</string>
-    <string name="secret">Secretaria Acadêmica – Coordenação</string>
-    <string name="secret_texto">Maria Verônica da Rocha Bamberg</string>
-    <string name="secret_ac">Secretária Acadêmica</string>
-    <string name="secret_ac_texto">Michela de Andrade Fernandes</string>
 </resources>
