Ajustes no app: Aplicada alterações para ocultar elementos solicitado pelo cliente; Removido imagem de fundo do layout_home

--- a/ProjetosAndroid/TP2/app/src/main/res/values/strings.xml
+++ b/ProjetosAndroid/TP2/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="bibliographic_collection">Acervo</string>
     <string name="course_pedagogical_project">Projeto Pedagógico do Curso</string>
     <string name="coordinator">Coordenador</string>
-    <string name="duration">Duração</string>
+    <string name="duration">Carga Horária</string>
     <string name="mec_evaluation">Avaliação do MEC</string>
     <string name="modality">Modalidade</string>
     <string name="shift">Turno</string>
