--- a/ProjetosAndroid/TP2/app/src/main/res/values/strings.xml
+++ b/ProjetosAndroid/TP2/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="leaders">Dirigentes</string>
     <string name="teachers">Docentes</string>
     <string name="curriculum">Matriz Curricular</string>
+    <string name="lattes">Curriculo Lattes</string>
     <string name="bibliographic_collection">Acervo</string>
     <string name="course_pedagogical_project">Projeto Pedagógico do Curso</string>
     <string name="coordinator">Coordenador</string>
