Ajustes no app: Alterado nome do aplicativo; Removido o splash

--- a/ProjetosAndroid/TP2/app/src/main/res/values/strings.xml
+++ b/ProjetosAndroid/TP2/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="title_activity_splash">Splash</string>
     <string name="title_activity_login">Login</string>
-    <string name="app_name">Cimatec Guide</string>
+    <string name="app_name">Guia Acadêmico</string>
     <string name="welcome">Bem-Vindo!</string>
     <string name="courses">Cursos</string>
     <string name="graduation">Graduação</string>
